# spicier

./: .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  WORK_LOG.md  WORK_PLAN.md
.github/workflows/: ci.yml
crates/spicier/: Cargo.toml  README.md
crates/spicier-backend-cpu/: Cargo.toml
crates/spicier-backend-cpu/src/: dense_operator.rs  lib.rs
crates/spicier-backend-cuda/: Cargo.toml
crates/spicier-backend-cuda/src/: batched_lu.rs  batched_sweep.rs  context.rs  dense_operator.rs  error.rs  ilu_preconditioner.rs  lib.rs  sparse_context.rs
crates/spicier-backend-metal/: Cargo.toml
crates/spicier-backend-metal/src/: batch_layout.rs  batched_gmres.rs  batched_lu.rs  batched_spmv.rs  buffer_pool.rs  chunked_sweep.rs  complex_matvec.wgsl  context.rs  dense_operator.rs  device_eval.rs  error.rs  gpu_newton.rs  ilu_preconditioner.rs  lib.rs  matrix_assembly.rs  memory.rs  real_matvec.wgsl
crates/spicier-backend-mps/: Cargo.toml
crates/spicier-backend-mps/src/: batched_lu.rs  context.rs  error.rs  lib.rs
crates/spicier-batched-sweep/: Cargo.toml  README.md
crates/spicier-batched-sweep/benches/: sweep_benchmark.rs
crates/spicier-batched-sweep/src/: batch_layout.rs  lib.rs  parallel.rs  pipeline.rs  rng.rs  solver.rs  spectral.rs  statistics.rs
crates/spicier-cli/: Cargo.toml
crates/spicier-cli/src/: main.rs  stampers.rs
crates/spicier-cli/src/analysis/: ac.rs  dc.rs  mod.rs  noise.rs
crates/spicier-core/: Cargo.toml
crates/spicier-core/benches/: matrix.rs
crates/spicier-core/src/: circuit.rs  element.rs  error.rs  lib.rs  mna.rs  netlist.rs  node.rs  units.rs
crates/spicier-devices/: Cargo.toml  README.md
crates/spicier-devices/benches/: devices.rs
crates/spicier-devices/src/: batch.rs  behavioral.rs  bjt.rs  diode.rs  error.rs  expression.rs  jfet.rs  lib.rs  mosfet.rs  mutual.rs  passive.rs  sources.rs  stamp.rs  tline.rs  waveforms.rs
crates/spicier-devices/src/expression/: ast.rs  eval.rs  functions.rs  mod.rs  parser.rs
crates/spicier-devices/src/mosfet/: level1.rs  mod.rs
crates/spicier-devices/src/mosfet/bsim1/: derived.rs  evaluate.rs  mod.rs  params.rs
crates/spicier-devices/src/mosfet/bsim3/: derived.rs  evaluate.rs  mod.rs  params.rs
crates/spicier-devices/src/mosfet/bsim4/: evaluate.rs
crates/spicier-parser/: Cargo.toml  README.md
crates/spicier-parser/benches/: parser.rs
crates/spicier-parser/src/: error.rs  lexer.rs  lib.rs  parser.rs
crates/spicier-parser/src/parser/: commands.rs  elements.rs  mod.rs  subcircuit.rs  types.rs
crates/spicier-parser/tests/: ngspice_validation.rs  parse_and_simulate.rs
crates/spicier-parser/tests/golden_data/: ac_transformers.json  dc_bjt.json  dc_jfet.json
crates/spicier-simd/: Cargo.toml
crates/spicier-simd/benches/: simd_benchmark.rs
crates/spicier-simd/src/: capability.rs  complex_dot.rs  conjugate_dot.rs  lib.rs  real_dot.rs
crates/spicier-solver/: Cargo.toml
crates/spicier-solver/benches/: solver.rs
crates/spicier-solver/src/: ac.rs  backend.rs  batched_newton.rs  dc.rs  dispatch.rs  error.rs  gmres.rs  ilu.rs  lib.rs  linear.rs  measure.rs  newton.rs  operator.rs  parallel.rs  solver_select.rs  sweep.rs  transient.rs
crates/spicier-solver/src/noise/: analysis.rs  mod.rs  sources.rs
crates/spicier-solver/src/sensitivity/: ac.rs  config.rs  dc.rs  mod.rs
crates/spicier-solver/src/spectral/: fft.rs  mod.rs  thd.rs
crates/spicier-solver/tests/: dc_integration.rs
crates/spicier-validate/: Cargo.toml
crates/spicier-validate/src/: error.rs  lib.rs
crates/spicier-validate/src/compare/: ac.rs  dc.rs  mod.rs  report.rs  tolerances.rs  transient.rs
crates/spicier-validate/src/golden/: format.rs  mod.rs
crates/spicier-validate/src/ngspice/: mod.rs  rawfile.rs  runner.rs  types.rs
crates/spicier-validate/src/spicier/: mod.rs
crates/spicier-validate/tests/: integration.rs
crates/spicier/src/: lib.rs
examples/: ac_filter.sp  current_source.sp  dc_sweep.sp  inductor_dc.sp  nested_dc_sweep.sp  print_test_tran.sp  rc_charging_uic.sp  rc_circuit.sp  rc_ic.sp  rc_ic_no_uic.sp  rc_uic.sp  voltage_divider.sp
