[workspace]
resolver = "2"
members = [
    "crates/spicier",
    "crates/spicier-core",
    "crates/spicier-simd",
    "crates/spicier-solver",
    "crates/spicier-devices",
    "crates/spicier-parser",
    "crates/spicier-backend-cpu",
    "crates/spicier-backend-cuda",
    "crates/spicier-backend-metal",
    "crates/spicier-batched-sweep",
    "crates/spicier-cli",
    "crates/spicier-validate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rwalters/spicier"

[workspace.dependencies]
# Internal crates
spicier = { path = "crates/spicier", version = "0.1.0" }
spicier-core = { path = "crates/spicier-core", version = "0.1.0" }
spicier-simd = { path = "crates/spicier-simd", version = "0.1.0" }
spicier-solver = { path = "crates/spicier-solver", version = "0.1.0" }
spicier-devices = { path = "crates/spicier-devices", version = "0.1.0" }
spicier-parser = { path = "crates/spicier-parser", version = "0.1.0" }
spicier-backend-cpu = { path = "crates/spicier-backend-cpu", version = "0.1.0" }
spicier-backend-cuda = { path = "crates/spicier-backend-cuda", version = "0.1.0" }
spicier-backend-metal = { path = "crates/spicier-backend-metal", version = "0.1.0" }
spicier-batched-sweep = { path = "crates/spicier-batched-sweep", version = "0.1.0" }

# Error handling
thiserror = "2"
anyhow = "1"

# Numerical/math
nalgebra = "0.33"
num-complex = "0.4"
num-traits = "0.2"
faer = "0.24"

# Collections
indexmap = "2"

# GPU/Backend
cudarc = { version = "0.16", features = ["std", "driver", "cublas", "dynamic-loading", "cuda-12000"], default-features = false }
wgpu = "23"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing/benchmarking
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
