[package]
name = "spicier-backend-cuda"
description = "CUDA backend for Spicier GPU-accelerated operators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spicier-solver.workspace = true
num-complex.workspace = true
cudarc.workspace = true
log.workspace = true
