[package]
name = "spicier-backend-cuda"
description = "CUDA backend for Spicier GPU-accelerated operators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "cuda", "gpu", "nvidia", "performance"]
categories = ["mathematics", "science"]

[dependencies]
spicier-solver.workspace = true
num-complex.workspace = true
nalgebra.workspace = true
cudarc.workspace = true
log.workspace = true
