[package]
name = "spicier-backend-metal"
description = "Metal/WebGPU backend for Spicier GPU-accelerated operators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "metal", "webgpu", "gpu", "performance"]
categories = ["mathematics", "science"]

[dependencies]
spicier-solver.workspace = true
num-complex.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true
log.workspace = true
