[package]
name = "spicier-cli"
description = "Command-line interface for Spicier circuit simulator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "circuit", "simulator", "cli", "eda"]
categories = ["command-line-utilities", "simulation", "science"]

[features]
default = []
cuda = ["spicier-backend-cuda"]
metal = ["spicier-backend-metal"]

[dependencies]
spicier-core.workspace = true
spicier-solver.workspace = true
spicier-devices.workspace = true
spicier-parser.workspace = true
anyhow.workspace = true
clap.workspace = true
num-complex.workspace = true
nalgebra.workspace = true

# Optional GPU backends
spicier-backend-cuda = { workspace = true, optional = true }
spicier-backend-metal = { workspace = true, optional = true }
