[package]
name = "spicier-core"
description = "Core circuit representation and MNA matrix structures for Spicier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
nalgebra.workspace = true
num-traits.workspace = true
indexmap.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "matrix"
harness = false
