[package]
name = "spicier-devices"
description = "Device models and MNA stamps for Spicier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spicier-core.workspace = true
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "devices"
harness = false
