[package]
name = "spicier-devices"
description = "Device models and MNA stamps for Spicier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "circuit", "devices", "mosfet", "diode"]
categories = ["science", "simulation"]

[dependencies]
spicier-core.workspace = true
spicier-simd.workspace = true
thiserror.workspace = true
num-traits.workspace = true
nalgebra.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "devices"
harness = false
