[package]
name = "spicier-parser"
description = "SPICE netlist parser for Spicier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "netlist", "parser", "circuit", "eda"]
categories = ["parser-implementations", "science"]

[dependencies]
spicier-core.workspace = true
spicier-devices.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
spicier-solver.workspace = true
nalgebra.workspace = true
num-complex.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "parser"
harness = false
