[package]
name = "spicier-solver"
description = "Linear and nonlinear solvers for Spicier"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["spice", "circuit", "solver", "newton-raphson", "gmres"]
categories = ["science", "simulation", "mathematics"]

[features]
default = ["accelerate"]
cuda = []
# Apple Accelerate framework (macOS only) - uses dgesv_ for 2-3x faster dense LU
accelerate = []

[dependencies]
spicier-core.workspace = true
spicier-devices.workspace = true
spicier-simd.workspace = true
thiserror.workspace = true
nalgebra.workspace = true
num-complex.workspace = true
num-traits.workspace = true
faer.workspace = true
log.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "solver"
harness = false
